Alignments and presentation, fixed bg and copy in summary

--- a/src/components/Section/index.scss
+++ b/src/components/Section/index.scss
@@ -1,5 +1,5 @@
 .section {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
